- New favicon.ico. - Changed hobby and interests icon. - Fixed scroll bar hidden behind fixed nav bar div.

--- a/src/app/components/about-me-section/about-me-section.component.css
+++ b/src/app/components/about-me-section/about-me-section.component.css
@@ -52,7 +52,7 @@
     background-size: contain;
 }
 .content-imageB {
-    background: url("/src/assets/images/css-grid-circle-image.jpg") no-repeat;
+    background: url("/src/assets/images/css-grid-circle-image.png") no-repeat;
     background-size: contain;
 }
 .content-imageC {
